<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="menu_home">О проекте</string>
    <string name="menu_sensors">Датчики</string>
    <string name="menu_camera">Камера</string>
    <string name="menu_recorder">Диктофон</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_files">Работа с файлами</string>
    <string name="menu_network">Сеть</string>
    <string name="menu_establishments">Заведения</string>
    <string name="menu_logout">Выход</string>
    <string name="student_name">Фёдоров Антон Сергеевич</string>
    <string name="student_group">БСБО-09-23</string>
    <string name="student_full">Фёдоров Антон Сергеевич, БСБО-09-23</string>
    <string name="nav_header_subtitle">Практические работы: данные, сеть и карты</string>
    <string name="permissions_template">Разрешения:&#10;Камера: %1$s&#10;Микрофон: %2$s&#10;Геолокация: %3$s</string>
    <string name="permission_granted">разрешено</string>
    <string name="permission_denied">не выдано</string>
    <string name="home_intro">В приложении собраны разделы практической работы по Android: работа с датчиками, камерой, аудиозаписью, сохранением профиля, шифрованными файлами, сетью и картами.</string>
    <string name="home_sensor_summary">Экран датчиков показывает список сенсоров, значения акселерометра и рассчитывает направление на север по данным устройства.</string>
    <string name="home_camera_summary">Экран камеры делает фотозаметку: снимок сохраняется в папку приложения, а подпись отображается рядом с фотографией.</string>
    <string name="home_recorder_summary">Экран диктофона позволяет записывать и воспроизводить голосовые заметки с запросом разрешения в момент использования.</string>
    <string name="home_profile_summary">Во фрагменте профиля данные пользователя сохраняются в SharedPreferences и автоматически восстанавливаются после перезапуска приложения.</string>
    <string name="home_files_summary">Во фрагменте работы с файлами создаются зашифрованные текстовые заметки в каталоге Documents приложения. Новая запись добавляется через Floating Action Button.</string>
    <string name="home_network_summary">Экран сети выполняет HTTPS-запрос через HttpURLConnection, получает JSON из удаленного ресурса и выводит результат без блокировки главного потока.</string>
    <string name="home_establishments_summary">Экран заведений показывает OpenStreetMap-карту с маркерами интересных мест, адресами, описаниями и функцией определения текущего местоположения.</string>
    <string name="login_title">Вход в MireaProject</string>
    <string name="login_subtitle">Авторизация выполняется через Firebase Authentication по электронной почте и паролю.</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_sign_in">Войти</string>
    <string name="login_create_account">Создать аккаунт</string>
    <string name="login_sign_out">Выйти</string>
    <string name="login_verify_email">Подтвердить email</string>
    <string name="login_continue">Продолжить</string>
    <string name="login_signed_out">Пользователь не авторизован.</string>
    <string name="login_signed_in">Пользователь авторизован.</string>
    <string name="login_progress">Выполняется запрос к Firebase…</string>
    <string name="login_auth_failed">Ошибка авторизации.</string>
    <string name="login_firebase_status_fmt">Firebase UID: %1$s</string>
    <string name="login_email_status_fmt">Email: %1$s&#10;Подтвержден: %2$b</string>
    <string name="login_email_required">Введите email.</string>
    <string name="login_password_required">Введите пароль.</string>
    <string name="login_password_too_short">Пароль должен быть не короче 6 символов.</string>
    <string name="login_config_missing_status">Firebase не настроен.</string>
    <string name="login_config_missing_detail">Добавьте конфигурацию проекта Firebase для Android-приложения ru.mirea.fedorov.mireaproject, чтобы включить регистрацию, вход и подтверждение почты.</string>
    <string name="login_verification_sent">Письмо подтверждения отправлено.</string>
    <string name="login_verification_failed">Не удалось отправить письмо подтверждения.</string>
    <string name="login_error_template">Firebase: %1$s</string>
    <string name="sensor_heading_default">Направление: ожидание данных</string>
    <string name="sensor_hint_default">Подвигайте устройство, чтобы увидеть изменения акселерометра и вычисленное направление на север.</string>
    <string name="sensor_count_template">Найдено датчиков: %1$d</string>
    <string name="sensor_no_accelerometer">На устройстве нет акселерометра.</string>
    <string name="sensor_no_magnetometer">Магнитометр отсутствует, поэтому вычисление направления на север недоступно.</string>
    <string name="heading_template">Азимут: %1$.1f° (%2$s)</string>
    <string name="north_hint_template">Подсказка: %1$s</string>
    <string name="axis_template">%1$s: %2$.2f</string>
    <string name="sensor_accuracy_template">Точность: %1$d</string>
    <string name="camera_title">Фотозаметка</string>
    <string name="camera_waiting_message">Сделайте снимок, чтобы сохранить фотозаметку в папку приложения.</string>
    <string name="camera_permission_denied_message">Разрешение на камеру не выдано.</string>
    <string name="camera_success_message">Снимок сохранён. Фото и подпись обновлены на экране.</string>
    <string name="camera_cancelled_message">Съёмка отменена.</string>
    <string name="camera_error_template">Не удалось открыть камеру: %1$s</string>
    <string name="camera_default_note">Без подписи</string>
    <string name="camera_note_template">Подпись к фото: %1$s</string>
    <string name="camera_note_placeholder">Здесь появится подпись к последнему снимку.</string>
    <string name="camera_note_hint">Комментарий к снимку</string>
    <string name="camera_take_photo">Сделать снимок</string>
    <string name="recorder_title">Голосовая заметка</string>
    <string name="audio_idle_message">Готово к записи голосовой заметки.</string>
    <string name="audio_permission_denied_message">Разрешение на микрофон не выдано.</string>
    <string name="audio_start_record">Начать запись</string>
    <string name="audio_stop_record">Остановить запись</string>
    <string name="audio_start_play">Воспроизвести</string>
    <string name="audio_stop_play">Остановить воспроизведение</string>
    <string name="audio_recording_started_template">Идёт запись файла %1$s.</string>
    <string name="audio_recording_finished_message">Запись завершена. Файл готов к воспроизведению.</string>
    <string name="audio_file_missing_message">Сначала запишите голосовую заметку.</string>
    <string name="audio_play_started_message">Идёт воспроизведение записи.</string>
    <string name="audio_play_finished_message">Воспроизведение завершено.</string>
    <string name="audio_error_template">Ошибка при работе с аудио: %1$s</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_subtitle">Данные сохраняются в SharedPreferences и восстанавливаются после новой загрузки приложения.</string>
    <string name="profile_name_hint">ФИО</string>
    <string name="profile_group_hint">Учебная группа</string>
    <string name="profile_track_hint">Любимое направление в Android</string>
    <string name="profile_goal_hint">Учебная цель на семестр</string>
    <string name="profile_save">Сохранить профиль</string>
    <string name="profile_status_default">Измените поля и нажмите кнопку сохранения.</string>
    <string name="profile_status_saved">Профиль сохранён в SharedPreferences.</string>
    <string name="profile_default_name">Фёдоров Антон Сергеевич</string>
    <string name="profile_default_group">БСБО-09-23</string>
    <string name="profile_default_track">Аппаратные возможности Android</string>
    <string name="profile_default_goal">Собрать сильное портфолио по мобильной разработке</string>
    <string name="files_title">Работа с файлами</string>
    <string name="files_subtitle">Экран реализует шифрованные текстовые заметки. Каждая запись сохраняется в каталоге Documents приложения в виде бинарного зашифрованного файла.</string>
    <string name="files_directory_template">Каталог заметок: %1$s</string>
    <string name="files_status_loading">Чтение заметок…</string>
    <string name="files_status_empty">Файлы пока не созданы.</string>
    <string name="files_status_saved">Файл сохранён и зашифрован.</string>
    <string name="files_status_error_template">Ошибка при работе с файлами: %1$s</string>
    <string name="files_status_count_template">Загружено файлов: %1$d</string>
    <string name="files_empty_state">Нажмите кнопку внизу справа, чтобы создать первую зашифрованную запись.</string>
    <string name="files_fab_desc">Добавить запись</string>
    <string name="files_dialog_title">Новая зашифрованная запись</string>
    <string name="files_dialog_save">Сохранить</string>
    <string name="files_dialog_cancel">Отмена</string>
    <string name="files_name_hint">Имя файла</string>
    <string name="files_text_hint">Текст записи</string>
    <string name="files_name_required">Укажите имя файла.</string>
    <string name="files_text_required">Введите текст записи.</string>
    <string name="files_note_meta_template">Обновлено: %1$s\n%2$s</string>
    <string name="files_open_close">Закрыть</string>
    <string name="files_storage_unavailable">Внешний каталог Documents недоступен.</string>
    <string name="network_title">Сетевой ресурс</string>
    <string name="network_subtitle">Фрагмент получает JSON с открытого GitHub API и показывает данные о репозитории Android Now in Android.</string>
    <string name="network_refresh">Обновить данные</string>
    <string name="network_status_loading">Выполняется сетевой запрос…</string>
    <string name="network_status_loaded">Данные получены из сети.</string>
    <string name="network_status_error_template">Ошибка сети: %1$s</string>
    <string name="network_repo_default">Данные еще не загружены.</string>
    <string name="network_description_default">Нажмите кнопку обновления, чтобы выполнить запрос.</string>
    <string name="network_stats_template">Звезды: %1$d&#10;Язык: %2$s&#10;Обновлено: %3$s</string>
    <string name="network_url_template">Источник: %1$s</string>
    <string name="network_empty_value">не указано</string>
    <string name="establishments_title">Заведения</string>
    <string name="establishments_subtitle">На карте отмечены интересные места Москвы. Нажмите на маркер, чтобы увидеть адрес и краткое описание.</string>
    <string name="establishments_show_all">Показать все</string>
    <string name="establishments_my_location">Мое местоположение</string>
    <string name="establishments_status_template">На карте отмечено заведений: %1$d. Включены жесты масштаба, компас и метрическая шкала.</string>
    <string name="establishments_location_loading">Определение местоположения…</string>
    <string name="establishments_location_enabled">Слой текущего местоположения включен.</string>
    <string name="establishments_location_unavailable">Местоположение пока не определено. Проверьте настройки геолокации эмулятора или устройства.</string>
    <string name="establishments_location_permission_denied">Разрешение на геолокацию не выдано.</string>
    <string name="establishments_dialog_message_template">Адрес: %1$s&#10;&#10;%2$s</string>
    <string name="establishment_mirea_name">РТУ МИРЭА</string>
    <string name="establishment_mirea_address">проспект Вернадского, 78, Москва</string>
    <string name="establishment_mirea_description">Главная учебная точка маршрута и место выполнения практических работ по мобильной разработке.</string>
    <string name="establishment_pushkin_name">Кафе «Пушкинъ»</string>
</resources>