<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_files"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_files" />
    </group>

</menu>
